@@ -12,6 +12,7 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 @Repository
@@ -39,16 +40,14 @@ public class ReviewDbStorage implements ReviewStorage {
             return stmt;
         }, keyHolder);
 
-        review.setReviewId(keyHolder.getKey().longValue());
-
-        return findById(review.getReviewId()).get();
+        review.setReviewId(Objects.requireNonNull(keyHolder.getKey()).longValue());
+        return review;
     }
 
     private void checkUserExists(Long userId) {
         String sql = "SELECT COUNT(*) FROM users WHERE id = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, userId);
-
-        if (count == null || count == 0) {
+        if (count == 0) {
             throw new NotFoundException("Пользователь с ID " + userId + " не найден");
         }
     }
@@ -56,7 +55,7 @@ public class ReviewDbStorage implements ReviewStorage {
     private void checkFilmExists(Long filmId) {
         String sql = "SELECT COUNT(*) FROM films WHERE id = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, filmId);
-        if (count == null || count == 0) {
+        if (count == 0) {
             throw new NotFoundException("Фильм с ID " + filmId + " не найден");
         }
     }
@@ -64,7 +63,7 @@ public class ReviewDbStorage implements ReviewStorage {
     private void checkReviewExists(Long reviewId) {
         String sql = "SELECT COUNT(*) FROM reviews WHERE id = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, reviewId);
-        if (count == null || count == 0) {
+        if (count == 0) {
             throw new NotFoundException("Отзыв с ID " + reviewId + " не найден");
         }
     }
@@ -73,7 +72,7 @@ public class ReviewDbStorage implements ReviewStorage {
     public Review update(Review review) {
         String sql = "UPDATE reviews SET content = ?, is_positive = ? WHERE id = ?";
         jdbcTemplate.update(sql, review.getContent(), review.getIsPositive(), review.getReviewId());
-        return findById(review.getReviewId()).get();
+        return review;
     }
 
     @Override
@@ -86,7 +85,7 @@ public class ReviewDbStorage implements ReviewStorage {
     public Optional<Review> findById(Long reviewId) {
         String sql = "SELECT * FROM reviews WHERE id = ?";
         List<Review> reviews = jdbcTemplate.query(sql, this::mapRowToReview, reviewId);
-        return reviews.isEmpty() ? Optional.empty() : Optional.of(reviews.get(0));
+        return reviews.isEmpty() ? Optional.empty() : Optional.of(reviews.getFirst());
     }
 
     @Override
@@ -103,15 +102,6 @@ public class ReviewDbStorage implements ReviewStorage {
 
     @Override
     public Review addLike(long reviewId, long userId) {
-        return processReviewVote(reviewId, userId, true);
-    }
-
-    @Override
-    public Review addDislike(long reviewId, long userId) {
-        return processReviewVote(reviewId, userId, false);
-    }
-
-    private Review processReviewVote(long reviewId, long userId, boolean isLike) {
         checkReviewExists(reviewId);
         checkUserExists(userId);
 
@@ -120,41 +110,27 @@ public class ReviewDbStorage implements ReviewStorage {
                 (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
         if (!existingVotes.isEmpty()) {
-            Boolean existingVote = existingVotes.get(0);
-
-            if (existingVote == isLike) {
+            Boolean existingVote = existingVotes.getFirst();
+            if (existingVote) {
                 return findById(reviewId).orElseThrow();
+            } else {
+                String updateSql = "UPDATE reviews SET useful = useful + 2 WHERE id = ?";
+                jdbcTemplate.update(updateSql, reviewId);
+                String updateLikeSql = "UPDATE review_likes SET is_like = true WHERE review_id = ? AND user_id = ?";
+                jdbcTemplate.update(updateLikeSql, reviewId, userId);
             }
-
-            int usefulChange = isLike ? 2 : -2;
-            String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-            jdbcTemplate.update(updateSql, usefulChange, reviewId);
-
-            String updateLikeSql = "UPDATE review_likes SET is_like = ? WHERE review_id = ? AND user_id = ?";
-            jdbcTemplate.update(updateLikeSql, isLike, reviewId, userId);
         } else {
-            int usefulChange = isLike ? 1 : -1;
-            String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-            jdbcTemplate.update(updateSql, usefulChange, reviewId);
-
-            String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, ?)";
-            jdbcTemplate.update(insertSql, reviewId, userId, isLike);
+            String updateSql = "UPDATE reviews SET useful = useful + 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
+            String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, true)";
+            jdbcTemplate.update(insertSql, reviewId, userId);
         }
 
         return findById(reviewId).orElseThrow();
     }
 
     @Override
-    public void removeLike(long reviewId, long userId) {
-        removeReviewVote(reviewId, userId, true);
-    }
-
-    @Override
-    public void removeDislike(long reviewId, long userId) {
-        removeReviewVote(reviewId, userId, false);
-    }
-
-    private void removeReviewVote(long reviewId, long userId, boolean isLike) {
+    public Review addDislike(long reviewId, long userId) {
         checkReviewExists(reviewId);
         checkUserExists(userId);
 
@@ -162,11 +138,56 @@ public class ReviewDbStorage implements ReviewStorage {
         List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
                 (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
-        if (!existingVotes.isEmpty() && existingVotes.get(0) == isLike) {
-            int usefulChange = isLike ? -1 : 1;
-            String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-            jdbcTemplate.update(updateSql, usefulChange, reviewId);
+        if (!existingVotes.isEmpty()) {
+            Boolean existingVote = existingVotes.getFirst();
+            if (!existingVote) {
+                return findById(reviewId).orElseThrow();
+            } else {
+                String updateSql = "UPDATE reviews SET useful = useful - 2 WHERE id = ?";
+                jdbcTemplate.update(updateSql, reviewId);
+                String updateLikeSql = "UPDATE review_likes SET is_like = false WHERE review_id = ? AND user_id = ?";
+                jdbcTemplate.update(updateLikeSql, reviewId, userId);
+            }
+        } else {
+            String updateSql = "UPDATE reviews SET useful = useful - 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
+            String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, false)";
+            jdbcTemplate.update(insertSql, reviewId, userId);
+        }
 
+        return findById(reviewId).orElseThrow();
+    }
+
+    @Override
+    public void removeLike(long reviewId, long userId) {
+        checkReviewExists(reviewId);
+        checkUserExists(userId);
+
+        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
+        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
+                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
+
+        if (!existingVotes.isEmpty() && existingVotes.getFirst()) {
+            String updateSql = "UPDATE reviews SET useful = useful - 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
+            String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
+            jdbcTemplate.update(deleteSql, reviewId, userId);
+        }
+    }
+
+    @Override
+    public void removeDislike(long reviewId, long userId) {
+        checkReviewExists(reviewId);
+        checkUserExists(userId);
+
+        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
+        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
+                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
+
+        if (!existingVotes.isEmpty() && !existingVotes.get(0)) {
+            // удаляю только если был дизлайк
+            String updateSql = "UPDATE reviews SET useful = useful + 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
             String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
             jdbcTemplate.update(deleteSql, reviewId, userId);
         }
